# vakit-pi

./: .gitignore  LICENSE  README.md  justfile  main.py  pyproject.toml
deploy/: install.sh  vakit-pi.service
docs/: bluetooth-speaker-setup.md
ornekler/: namaz-saati.html  namaz_vakti_hesaplama.py
src/vakit_pi/: __init__.py  cli.py  config.py  main.py
src/vakit_pi/api/: __init__.py  app.py  dependencies.py  routes.py  schemas.py
src/vakit_pi/assets/audio/: README.md
src/vakit_pi/domain/: __init__.py  events.py  models.py
src/vakit_pi/infrastructure/: __init__.py  audio.py  event_bus.py  scheduler.py  settings_repository.py
src/vakit_pi/services/: __init__.py  adhan_service.py  ports.py  prayer_service.py  scheduler_service.py
src/vakit_pi/web/: index.html
src/vakit_pi/web/static/: style.css
tests/: __init__.py  test_api.py  test_models.py  test_prayer_service.py
